# PostureWatch

./: AGENTS.md  CONTRIBUTE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  app.manifest  build.rs
.github/workflows/: build.yml  release.yml  remediate-failed-release.yml  rust.yml  tagger.yml  test.yml  token-test.yml
ci-self-improve/: tagger-dispatch.sh
release/: install.bat
src/: alert.rs  camera.rs  config.rs  frame_notification.rs  gui.rs  i18n.rs  logging.rs  main.rs  posture.rs  posture_monitor.rs  tray.rs
src/tests/: alert_tests.rs  camera_tests.rs  config_tests.rs  logging_tests.rs  main_tests.rs  posture_monitor_tests.rs  posture_tests.rs  tray_tests.rs
