# PostureWatch - GUI application
[package]
name = "posturewatch"
version = "0.1.0"
edition = "2021"
description = "Posture monitoring app with webcam and LLM"

[[bin]]
name = "posturewatch"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.14"
anyhow = "1.0"
directories = "5.0"
base64 = "0.22"
image = "0.25"
chrono = "0.4"
nokhwa = { version = "0.10.10", features = ["input-native"] }
toml = "0.8"

# Logging
log = "0.4"
env_logger = "0.11"

# System tray
tray-icon = "0.16"

[target.'cfg(windows)'.dependencies]
winrt-notification = "0.5"

[target.'cfg(not(windows))'.dependencies]
notify-rust = "4.10"

[profile.release]
strip = true
lto = true
codegen-units = 1

[profile.release.target.'x86_64-pc-windows-gnu'.rustflags]
rustflags = ["-C", "link-args=-Wl,--subsystem,windows"]
