# PostureWatch - GUI application
[package]
name = "posturewatch"
version = "0.1.0"
edition = "2021"
description = "Posture monitoring app with webcam and LLM"
license = "MIT"
build = "build.rs"

[[bin]]
name = "posturewatch"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
directories = "5.0"
base64 = "0.22"
image = "0.25"
nokhwa = { version = "0.10.10", features = ["input-native"] }
toml = "0.8"

[target.'cfg(windows)'.dependencies]
winrt-notification = "0.5"
native-dialog = "0.9"
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader"] }
native-windows-gui = "1.0"
native-windows-derive = "1.0"
tray-icon = "0.16"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[target.'cfg(not(windows))'.dependencies]
notify-rust = "4.10"

[profile.release]
strip = false
lto = "thin"
codegen-units = 16
